--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240729162200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240730092527">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,10 +58,10 @@
 			<div class="about-page section-padding">
 				<div class="about-page__container">
 					<div class="about-page__inner">
-						<div class="about-page__img -ibg">
+						<div class="about-page__img wow animate__fadeInLeft -ibg">
 							<img src="img/about-page-img.jpg" alt="Image">
 						</div>
-						<div class="about-page__content content-about">
+						<div class="about-page__content wow animate__fadeInRight content-about">
 							<div class="content-about__title">-Приветствую!</div>
 							<small>меня зовут Максим, и я <span>лично отвечаю за&nbsp;качество выполнения работы.</span>
 							</small>
@@ -74,7 +74,7 @@
 						</div>
 					</div>
 					<div class="about-page__stages">
-						<div class="stages-item">
+						<div class="stages-item wow animate__fadeInRight" data-wow-delay=".2s">
 							<div class="stages-item__year">
 								2018
 							</div>
@@ -84,7 +84,7 @@
 								специалистов, которые постоянно совершенствуют свои навыки и знания.
 							</div>
 						</div>
-						<div class="stages-item">
+						<div class="stages-item wow animate__fadeInRight" data-wow-delay=".4s">
 							<div class="stages-item__year">
 								2022
 							</div>
@@ -93,7 +93,7 @@
 
 							</div>
 						</div>
-						<div class="stages-item">
+						<div class="stages-item wow animate__fadeInRight" data-wow-delay=".6s">
 							<div class="stages-item__year">
 								2024
 							</div>
@@ -108,9 +108,9 @@
 			</div>
 			<section class="management section-padding">
 				<div class="management__container">
-					<h2 class="management__title title-page">Доверительное управление</h2>
+					<h2 class="management__title title-page wow animate__fadeInUp">Доверительное управление</h2>
 					<div class="management__inner flex-img flex-img_reverse">
-						<div class="flex-img__item about-content">
+						<div class="flex-img__item about-content wow animate__fadeInRight">
 							<div class="about-content__text">
 								В настоящее время мы можем не только помочь Вам с ремонтом квартиры, но и взять ее в <span>последующее
 									доверительное управление</span>
@@ -133,7 +133,7 @@
 								<i class="circle-btn"></i>
 							</div>
 						</div>
-						<div class="flex-img__item -ibg">
+						<div class="flex-img__item -ibg  wow animate__fadeInUp">
 							<img src="img/management-img.jpg" alt="Image">
 						</div>
 					</div>
@@ -142,34 +142,34 @@
 
 			<section class="partners section-padding">
 				<div class="partners__container">
-					<h2 class="about__title title-page">партнеры</h2>
+					<h2 class="about__title title-page animate__fadeInUp wow">партнеры</h2>
 					<div class="partners__items">
-						<div class="partner _active">
+						<div class="partner animate__fadeInRight wow _active" data-wow-delay=".2s">
 							<div class="partner__content">
 								<div class="partner__title">ПЕТРОВИЧ</div>
 								<div class="partner__text">СТАТУС: СУПЕРЭКСПЕРТ</div>
 							</div>
 							<i class="circle-btn"></i>
 						</div>
-						<div class="partner">
+						<div class="partner animate__fadeInRight wow" data-wow-delay=".4s">
 							<div class="partner__content">
 								<div class="partner__title">Леруа Мерлен</div>
 							</div>
 							<i class="circle-btn"></i>
 						</div>
-						<div class="partner">
+						<div class="partner animate__fadeInRight wow" data-wow-delay=".6s">
 							<div class="partner__content">
 								<div class="partner__title">Обойкин</div>
 							</div>
 							<i class="circle-btn"></i>
 						</div>
-						<div class="partner">
+						<div class="partner animate__fadeInRight wow" data-wow-delay=".8s">
 							<div class="partner__content">
 								<div class="partner__title">Дядюшка плинтус</div>
 							</div>
 							<i class="circle-btn"></i>
 						</div>
-						<div class="partner">
+						<div class="partner animate__fadeInRight wow" data-wow-delay="1s">
 							<div class="partner__content">
 								<div class="partner__title">Grand Discont</div>
 							</div>
@@ -180,9 +180,9 @@
 			</section>
 			<section class="team section-padding">
 				<div class="team__container">
-					<h2 class="title-page">Сотрудники</h2>
-					<div class="team__items scrollbar">
-						<div class="item-team">
+					<h2 class="title-page ">Сотрудники</h2>
+					<div class="team__items wow animate__fadeInUp scrollbar">
+						<div class="item-team wow animate__fadeInRight" data-wow-delay=".2s">
 							<div class="item-team__icon">
 								<img src="img/team/01.png" alt="Image">
 							</div>
@@ -192,7 +192,7 @@
 								<small>Прораб</small>
 							</div>
 						</div>
-						<div class="item-team">
+						<div class="item-team wow animate__fadeInRight" data-wow-delay=".4s">
 							<div class="item-team__icon">
 								<img src="img/team/01.png" alt="Image">
 							</div>
@@ -202,7 +202,7 @@
 								<small>Прораб</small>
 							</div>
 						</div>
-						<div class="item-team">
+						<div class="item-team wow animate__fadeInRight" data-wow-delay=".6s">
 							<div class="item-team__icon">
 								<img src="img/team/01.png" alt="Image">
 							</div>
@@ -212,7 +212,7 @@
 								<small>Прораб</small>
 							</div>
 						</div>
-						<div class="item-team">
+						<div class="item-team wow animate__fadeInRight" data-wow-delay=".8s">
 							<div class="item-team__icon">
 								<img src="img/team/01.png" alt="Image">
 							</div>
@@ -222,7 +222,7 @@
 								<small>Прораб</small>
 							</div>
 						</div>
-						<div class="item-team">
+						<div class="item-team wow animate__fadeInRight" data-wow-delay="1s">
 							<div class="item-team__icon">
 								<img src="img/team/01.png" alt="Image">
 							</div>
@@ -232,7 +232,7 @@
 								<small>Прораб</small>
 							</div>
 						</div>
-						<div class="item-team">
+						<div class="item-team wow animate__fadeInRight" data-wow-delay="1.2s">
 							<div class="item-team__icon">
 								<img src="img/team/01.png" alt="Image">
 							</div>
@@ -242,7 +242,7 @@
 								<small>Прораб</small>
 							</div>
 						</div>
-						<div class="item-team">
+						<div class="item-team wow animate__fadeInRight" data-wow-delay="1.4s">
 							<div class="item-team__icon">
 								<img src="img/team/01.png" alt="Image">
 							</div>
@@ -257,8 +257,8 @@
 			</section>
 			<section class="gallery section-padding">
 				<div class="gallery__container">
-					<h2 class="gallery__title title-page">Галерея проектов</h2>
-					<div class="gallery__body swiper">
+					<h2 class="gallery__title title-page animate__fadeInUp wow">Галерея проектов</h2>
+					<div class="gallery__body swiper wow animate__fadeInUp">
 						<div class="gallery__wrapper swiper-wrapper">
 							<div class="gallery__slide swiper-slide">
 								<div class="item-gallery">
@@ -326,13 +326,13 @@
 				<div class="feedback__container">
 					<div class="feedback__wrapper" style="background-image: url(img/feedback-img.jpg);">
 						<div class="feedback__content">
-							<div class="feedback__info">
+							<div class="feedback__info animate__fadeInUp wow">
 								<h2 class="feedback__title title">Инвестируйте вместе с нами!</h2>
 								<div class="feedback__text">Оставьте ваши контакты и наш менеджер свяжется с вами в ближайшее
 									время!
 								</div>
 							</div>
-							<div class="feedback__socials hero-socials">
+							<div class="feedback__socials hero-socials animate__fadeInUp wow">
 								<div class="hero-socials__title">Мы в соцсетях:</div>
 								<div class="hero-socials__buttons">
 									<a href="" class="hero-socials__btn button button_secondary">
@@ -346,7 +346,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feedback__form" data-da=".feedback__content, 767.98">
+						<div class="feedback__form animate__fadeInRight wow" data-da=".feedback__content, 767.98">
 							<form action="#" class="form">
 								<div class="form__row">
 									<input class="input" autocomplete="off" type="text" placeholder="Ваше имя">
@@ -408,7 +408,7 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+		<footer class="footer wow animate__fadeInUp">
 			<div class="footer__container">
 				<a href="/" class="footer__logo logo"><img src="img/logo.svg" alt="Logo"></a>
 				<div class="footer__links">
@@ -422,7 +422,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240729162200"></script>
+	<script src="js/app.min.js?_v=20240730092527"></script>
 </body>
 
 </html>
