--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240729162200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240730092527">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,9 +57,9 @@
 		<main class="page">
 			<section class="blog section-padding">
 				<div class="blog__container">
-					<h2 class="title-page">Последняя новость</h2>
+					<h2 class="title-page  wow animate__fadeInUp">Последняя новость</h2>
 					<div class="blog__last-news">
-						<div class="item-blog item-blog_last">
+						<div class="item-blog item-blog_last  wow animate__fadeInLeft">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -76,7 +76,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="blog__contact accent-block" data-da=".blog__container, 767.98,first">
+						<div class="blog__contact accent-block  wow animate__fadeInRight" data-da=".blog__container, 767.98,first">
 							<div class="accent-block__content">
 								<div class="accent-block__text">
 									Читайте наши новости в нашем канале Telegram
@@ -92,9 +92,9 @@
 			</section>
 			<section class="blog section-padding">
 				<div class="blog__container">
-					<h2 class="reviews__title title-page">Все новости</h2>
+					<h2 class="reviews__title title-page  wow animate__fadeInUp">Все новости</h2>
 					<div class="blog__items">
-						<div class="item-blog">
+						<div class="item-blog  wow animate__fadeInRight" data-wow-delay=".2s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -111,7 +111,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-blog">
+						<div class="item-blog wow animate__fadeInRight" data-wow-delay=".4s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -128,7 +128,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-blog">
+						<div class="item-blog wow animate__fadeInRight" data-wow-delay=".6s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -145,7 +145,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-blog">
+						<div class="item-blog wow animate__fadeInRight" data-wow-delay=".2s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -162,7 +162,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-blog">
+						<div class="item-blog wow animate__fadeInRight" data-wow-delay=".4s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -179,7 +179,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-blog">
+						<div class="item-blog wow animate__fadeInRight" data-wow-delay=".6s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -203,13 +203,13 @@
 				<div class="feedback__container">
 					<div class="feedback__wrapper" style="background-image: url(img/feedback-img.jpg);">
 						<div class="feedback__content">
-							<div class="feedback__info">
+							<div class="feedback__info animate__fadeInUp wow">
 								<h2 class="feedback__title title">Инвестируйте вместе с нами!</h2>
 								<div class="feedback__text">Оставьте ваши контакты и наш менеджер свяжется с вами в ближайшее
 									время!
 								</div>
 							</div>
-							<div class="feedback__socials hero-socials">
+							<div class="feedback__socials hero-socials animate__fadeInUp wow">
 								<div class="hero-socials__title">Мы в соцсетях:</div>
 								<div class="hero-socials__buttons">
 									<a href="" class="hero-socials__btn button button_secondary">
@@ -223,7 +223,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feedback__form" data-da=".feedback__content, 767.98">
+						<div class="feedback__form animate__fadeInRight wow" data-da=".feedback__content, 767.98">
 							<form action="#" class="form">
 								<div class="form__row">
 									<input class="input" autocomplete="off" type="text" placeholder="Ваше имя">
@@ -285,7 +285,7 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+		<footer class="footer wow animate__fadeInUp">
 			<div class="footer__container">
 				<a href="/" class="footer__logo logo"><img src="img/logo.svg" alt="Logo"></a>
 				<div class="footer__links">
@@ -299,7 +299,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240729162200"></script>
+	<script src="js/app.min.js?_v=20240730092527"></script>
 </body>
 
 </html>
