--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240729162200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240730092527">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,11 +59,11 @@
 				<div class="hero__container">
 					<div class="hero__inner">
 						<div class="hero__content">
-							<div class="hero__top">
+							<div class="hero__top animate__fadeInUp wow">
 								<h1 class="hero__title title"><span>Профессиональный ремонт квартир</span> в Санкт
 									Петербурге</h1>
 							</div>
-							<div class="hero__gallery" data-gallery>
+							<div class="hero__gallery animate__zoomIn wow" data-gallery>
 								<a class="-ibg" href="img/main/hero/01.jpg">
 									<img src="img/main/hero/01.jpg" />
 								</a>
@@ -122,17 +122,17 @@
 						</div>
 					</div>
 					<div class="hero__benefits benefits">
-						<div class="benefits__item">
+						<div class="benefits__item animate__fadeInRight wow" data-wow-delay=".2s">
 							<strong>Широкий спектр услуг</strong>
 							Благодаря команде профессионалов и опытных специалистов мы можем предложить вам комплексное
 							решение для ремонта и отделки вашей квартиры или любого другого помещения
 						</div>
-						<div class="benefits__item">
+						<div class="benefits__item animate__fadeInRight wow" data-wow-delay=".4s">
 							<strong>Индивидуальный подход</strong>
 							Мы учитываем индивидуальные предпочтения заказчиков и запланированный бюджет, предлагая услуги
 							“под ключ” и возможность выбора оригинальных дизайнов.
 						</div>
-						<div class="benefits__item">
+						<div class="benefits__item animate__fadeInRight wow" data-wow-delay=".6s">
 							<strong>Открытость к клиенту </strong>
 							Мы предоставляем фото и видеоотчёты на каждом этапе работ, чтобы обеспечить максимальную
 							прозрачность и информированность о потраченных материалах.
@@ -142,21 +142,21 @@
 			</section>
 			<section class="services section-padding">
 				<div class="services__container">
-					<h2 class="services__title title-page">Услуги нашей компании</h2>
+					<h2 class="services__title title-page animate__fadeInUp wow">Услуги нашей компании</h2>
 					<div class="services__items">
-						<a href="" class="service" style="background-image: url(img/services/01.jpg);">
+						<a href="" class="service animate__fadeInRight wow" data-wow-delay=".2s" style="background-image: url(img/services/01.jpg);">
 							<i class="circle-btn"></i>
 							<div class="service__title">Ремонт</div>
 						</a>
-						<a href="" class="service" style="background-image: url(img/services/02.jpg);">
+						<a href="" class="service animate__fadeInRight wow" data-wow-delay=".4s" style="background-image: url(img/services/02.jpg);">
 							<i class="circle-btn"></i>
 							<div class="service__title">Перепланировка</div>
 						</a>
-						<a href="" class="service" style="background-image: url(img/services/03.jpg);">
+						<a href="" class="service animate__fadeInRight wow" data-wow-delay=".6s" style="background-image: url(img/services/03.jpg);">
 							<i class="circle-btn"></i>
 							<div class="service__title">Отделочные работы</div>
 						</a>
-						<a href="" class="service button-accent">
+						<a href="" class="service animate__fadeInUp wow button-accent" data-wow-delay=".8s">
 							<div class="button-accent__content">
 								<strong class="service__title">Флиппинг</strong>
 								Инвестирование в недвижимость на короткое время и ее последующая перепродажа с целью
@@ -169,9 +169,9 @@
 			</section>
 			<section class="about section-padding">
 				<div class="about__container">
-					<h2 class="about__title title-page">О нас</h2>
+					<h2 class="about__title title-page animate__fadeInUp wow">О нас</h2>
 					<div class="flex-img">
-						<div class="flex-img__item about-content">
+						<div class="flex-img__item about-content animate__fadeInUp wow">
 							<div class="about-content__text _border">
 								<p> Предоставляем комплексную услугу, начиная с помощи приемки квартиры у застройщика и
 									разработки дизайн-проекта, до поставки на объект как черновых, так и отделочных
@@ -189,7 +189,7 @@
 								<a href="" class="about-content__btn button">Подробнее</a>
 							</div>
 						</div>
-						<div class="flex-img__item -ibg">
+						<div class="flex-img__item -ibg animate__fadeInRight wow">
 							<img src="img/about-img.jpg" alt="Image">
 						</div>
 					</div>
@@ -197,34 +197,34 @@
 			</section>
 			<section class="partners section-padding">
 				<div class="partners__container">
-					<h2 class="about__title title-page">партнеры</h2>
+					<h2 class="about__title title-page animate__fadeInUp wow">партнеры</h2>
 					<div class="partners__items">
-						<div class="partner _active">
+						<div class="partner animate__fadeInRight wow _active" data-wow-delay=".2s">
 							<div class="partner__content">
 								<div class="partner__title">ПЕТРОВИЧ</div>
 								<div class="partner__text">СТАТУС: СУПЕРЭКСПЕРТ</div>
 							</div>
 							<i class="circle-btn"></i>
 						</div>
-						<div class="partner">
+						<div class="partner animate__fadeInRight wow" data-wow-delay=".4s">
 							<div class="partner__content">
 								<div class="partner__title">Леруа Мерлен</div>
 							</div>
 							<i class="circle-btn"></i>
 						</div>
-						<div class="partner">
+						<div class="partner animate__fadeInRight wow" data-wow-delay=".6s">
 							<div class="partner__content">
 								<div class="partner__title">Обойкин</div>
 							</div>
 							<i class="circle-btn"></i>
 						</div>
-						<div class="partner">
+						<div class="partner animate__fadeInRight wow" data-wow-delay=".8s">
 							<div class="partner__content">
 								<div class="partner__title">Дядюшка плинтус</div>
 							</div>
 							<i class="circle-btn"></i>
 						</div>
-						<div class="partner">
+						<div class="partner animate__fadeInRight wow" data-wow-delay="1s">
 							<div class="partner__content">
 								<div class="partner__title">Grand Discont</div>
 							</div>
@@ -235,9 +235,9 @@
 			</section>
 			<section class="management section-padding">
 				<div class="management__container">
-					<h2 class="management__title title-page">Доверительное управление</h2>
+					<h2 class="management__title title-page wow animate__fadeInUp">Доверительное управление</h2>
 					<div class="management__inner flex-img flex-img_reverse">
-						<div class="flex-img__item about-content">
+						<div class="flex-img__item about-content wow animate__fadeInRight">
 							<div class="about-content__text">
 								В настоящее время мы можем не только помочь Вам с ремонтом квартиры, но и взять ее в <span>последующее
 									доверительное управление</span>
@@ -260,7 +260,7 @@
 								<i class="circle-btn"></i>
 							</div>
 						</div>
-						<div class="flex-img__item -ibg">
+						<div class="flex-img__item -ibg  wow animate__fadeInUp">
 							<img src="img/management-img.jpg" alt="Image">
 						</div>
 					</div>
@@ -269,9 +269,9 @@
 
 			<section class="type section-padding">
 				<div class="type__container">
-					<h2 class="title-page">Дизайн-проекты</h2>
+					<h2 class="title-page  wow animate__fadeInUp">Дизайн-проекты</h2>
 					<div class="type__inner">
-						<div class="type__left">
+						<div class="type__left  wow animate__fadeInUp">
 							<div class="text-wrapper">
 								<div class="text-wrapper__body">
 									<div class="text-wrapper__title">
@@ -319,7 +319,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="type__right">
+						<div class="type__right  wow animate__fadeInRight">
 							<div class="text-wrapper">
 								<div class="text-wrapper__body">
 									<div class="text-wrapper__title">
@@ -342,15 +342,15 @@
 
 			<section class="reviews section-padding">
 				<div class="reviews__container">
-					<h2 class="reviews__title title-page">Отзывы наших клиентов</h2>
+					<h2 class="reviews__title title-page animate__fadeInUp wow">Отзывы наших клиентов</h2>
 					<div class="reviews__inner"></div>
 				</div>
 			</section>
 			<section class="blog section-padding">
 				<div class="blog__container">
-					<h2 class="title-page">Последние новости</h2>
+					<h2 class="title-page animate__fadeInUp wow">Последние новости</h2>
 					<div class="blog__items">
-						<div class="item-blog">
+						<div class="item-blog animate__fadeInRight wow" data-wow-delay=".2s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -369,7 +369,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-blog">
+						<div class="item-blog animate__fadeInRight wow" data-wow-delay=".4s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -388,7 +388,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-blog">
+						<div class="item-blog animate__fadeInRight wow" data-wow-delay=".6s">
 							<a href="" class="stretched-link"></a>
 							<div class="item-blog__header">
 								<img src="img/blog/01.jpg" alt="Image" class="item-blog__img">
@@ -415,8 +415,8 @@
 			</section>
 			<section class="gallery section-padding">
 				<div class="gallery__container">
-					<h2 class="gallery__title title-page">Галерея проектов</h2>
-					<div class="gallery__body swiper">
+					<h2 class="gallery__title title-page animate__fadeInUp wow">Галерея проектов</h2>
+					<div class="gallery__body swiper wow animate__fadeInUp">
 						<div class="gallery__wrapper swiper-wrapper">
 							<div class="gallery__slide swiper-slide">
 								<div class="item-gallery">
@@ -484,13 +484,13 @@
 				<div class="feedback__container">
 					<div class="feedback__wrapper" style="background-image: url(img/feedback-img.jpg);">
 						<div class="feedback__content">
-							<div class="feedback__info">
+							<div class="feedback__info animate__fadeInUp wow">
 								<h2 class="feedback__title title">Мы поможем Вам в создании жилья Вашей мечты!</h2>
 								<div class="feedback__text">Оставьте ваши контакты и наш менеджер свяжется с вами в ближайшее
 									время!
 								</div>
 							</div>
-							<div class="feedback__socials hero-socials">
+							<div class="feedback__socials hero-socials animate__fadeInUp wow">
 								<div class="hero-socials__title">Мы в соцсетях:</div>
 								<div class="hero-socials__buttons">
 									<a href="" class="hero-socials__btn button button_secondary">
@@ -504,7 +504,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feedback__form" data-da=".feedback__content, 767.98">
+						<div class="feedback__form animate__fadeInRight wow" data-da=".feedback__content, 767.98">
 							<form action="#" class="form">
 								<div class="form__row">
 									<input class="input" autocomplete="off" type="text" placeholder="Ваше имя">
@@ -566,7 +566,7 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+		<footer class="footer wow animate__fadeInUp">
 			<div class="footer__container">
 				<a href="/" class="footer__logo logo"><img src="img/logo.svg" alt="Logo"></a>
 				<div class="footer__links">
@@ -580,7 +580,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240729162200"></script>
+	<script src="js/app.min.js?_v=20240730092527"></script>
 </body>
 
 </html>
