--- a/price.html
+++ b/price.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240729162200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240730092527">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,7 +58,7 @@
 			<section class="hero section-padding hero_inner">
 				<div class="hero__container">
 					<div class="hero__inner _price">
-						<div class="hero__content">
+						<div class="hero__content wow animate__fadeInUp">
 							<div class="hero__img -ibg">
 								<div class="hero__title-block title-block">
 									<h1 class="title-block__title">Прайс-лист</h1>
@@ -69,7 +69,7 @@
 								</picture>
 							</div>
 						</div>
-						<div class="hero__sidebar">
+						<div class="hero__sidebar wow animate__fadeInUp">
 							<div class="title-page">Наши услуги</div>
 							<ul class="our-services">
 								<li class="our-services__item"><a class="our-services__link" href="">
@@ -91,7 +91,7 @@
 							</ul>
 						</div>
 						<div class="spollers" data-spollers="">
-							<details class="spollers__item">
+							<details class="spollers__item wow animate__fadeInRight" data-wow-delay=".2s">
 								<summary class="spollers__title">УСТРОЙСТВО ПОЛОВ</summary>
 								<div class="spollers__body">
 									<div class="table-body">
@@ -343,7 +343,7 @@
 									</div>
 								</div>
 							</details>
-							<details class="spollers__item">
+							<details class="spollers__item wow animate__fadeInRight" data-wow-delay=".4s">
 								<summary class="spollers__title">СТЕНЫ, МАЛЯРНО-ШТУКАТУРНЫЕ РАБОТЫ</summary>
 								<div class="spollers__body">
 									<div class="table-body">
@@ -596,7 +596,7 @@
 
 								</div>
 							</details>
-							<details class="spollers__item">
+							<details class="spollers__item wow animate__fadeInRight" data-wow-delay=".6s">
 								<summary class="spollers__title">ПОТОЛКИ</summary>
 								<div class="spollers__body">
 									<div class="table-body">
@@ -849,7 +849,7 @@
 
 								</div>
 							</details>
-							<details class="spollers__item">
+							<details class="spollers__item wow animate__fadeInRight" data-wow-delay=".8s">
 								<summary class="spollers__title">ДВЕРИ</summary>
 								<div class="spollers__body">
 									<div class="table-body">
@@ -1102,7 +1102,7 @@
 
 								</div>
 							</details>
-							<details class="spollers__item">
+							<details class="spollers__item wow animate__fadeInRight" data-wow-delay="1s">
 								<summary class="spollers__title">САНТЕХНИКА</summary>
 								<div class="spollers__body">
 									<div class="table-body">
@@ -1363,13 +1363,13 @@
 				<div class="feedback__container">
 					<div class="feedback__wrapper" style="background-image: url(img/feedback-img.jpg);">
 						<div class="feedback__content">
-							<div class="feedback__info">
+							<div class="feedback__info animate__fadeInUp wow">
 								<h2 class="feedback__title title">Инвестируйте вместе с нами!</h2>
 								<div class="feedback__text">Оставьте ваши контакты и наш менеджер свяжется с вами в ближайшее
 									время!
 								</div>
 							</div>
-							<div class="feedback__socials hero-socials">
+							<div class="feedback__socials hero-socials animate__fadeInUp wow">
 								<div class="hero-socials__title">Мы в соцсетях:</div>
 								<div class="hero-socials__buttons">
 									<a href="" class="hero-socials__btn button button_secondary">
@@ -1383,7 +1383,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feedback__form" data-da=".feedback__content, 767.98">
+						<div class="feedback__form animate__fadeInRight wow" data-da=".feedback__content, 767.98">
 							<form action="#" class="form">
 								<div class="form__row">
 									<input class="input" autocomplete="off" type="text" placeholder="Ваше имя">
@@ -1445,7 +1445,7 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+		<footer class="footer wow animate__fadeInUp">
 			<div class="footer__container">
 				<a href="/" class="footer__logo logo"><img src="img/logo.svg" alt="Logo"></a>
 				<div class="footer__links">
@@ -1459,7 +1459,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240729162200"></script>
+	<script src="js/app.min.js?_v=20240730092527"></script>
 </body>
 
 </html>
