--- a/blog-single.html
+++ b/blog-single.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240729162200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240730092527">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -144,13 +144,13 @@
 				<div class="feedback__container">
 					<div class="feedback__wrapper" style="background-image: url(img/feedback-img.jpg);">
 						<div class="feedback__content">
-							<div class="feedback__info">
+							<div class="feedback__info animate__fadeInUp wow">
 								<h2 class="feedback__title title">Инвестируйте вместе с нами!</h2>
 								<div class="feedback__text">Оставьте ваши контакты и наш менеджер свяжется с вами в ближайшее
 									время!
 								</div>
 							</div>
-							<div class="feedback__socials hero-socials">
+							<div class="feedback__socials hero-socials animate__fadeInUp wow">
 								<div class="hero-socials__title">Мы в соцсетях:</div>
 								<div class="hero-socials__buttons">
 									<a href="" class="hero-socials__btn button button_secondary">
@@ -164,7 +164,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feedback__form" data-da=".feedback__content, 767.98">
+						<div class="feedback__form animate__fadeInRight wow" data-da=".feedback__content, 767.98">
 							<form action="#" class="form">
 								<div class="form__row">
 									<input class="input" autocomplete="off" type="text" placeholder="Ваше имя">
@@ -226,7 +226,7 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+		<footer class="footer wow animate__fadeInUp">
 			<div class="footer__container">
 				<a href="/" class="footer__logo logo"><img src="img/logo.svg" alt="Logo"></a>
 				<div class="footer__links">
@@ -240,7 +240,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240729162200"></script>
+	<script src="js/app.min.js?_v=20240730092527"></script>
 </body>
 
 </html>
