--- a/redevelopment.html
+++ b/redevelopment.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240729162200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240730092527">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,7 +58,7 @@
 			<section class="hero section-padding hero_inner">
 				<div class="hero__container">
 					<div class="hero__inner">
-						<div class="hero__content">
+						<div class="hero__content wow animate__fadeInLeft">
 							<div class="hero__img -ibg">
 								<div class="hero__title-block title-block">
 									<h1 class="title-block__title">Перепланировка</h1>
@@ -70,7 +70,7 @@
 								</picture>
 							</div>
 						</div>
-						<div class="hero__sidebar">
+						<div class="hero__sidebar wow animate__fadeInRight">
 							<div class="hero__form">
 								<form action="#" class="form">
 									<div class="form__header">
@@ -110,7 +110,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="hero__dop dop-info">
+					<div class="hero__dop dop-info wow animate__fadeInUp">
 						<div class="dop-info__icon">
 							<img src="img/icons/information.svg" alt="Image">
 						</div>
@@ -133,16 +133,16 @@
 			</section>
 			<section class="steps section-padding">
 				<div class="steps__container">
-					<h2 class="title-page">Этапы работы</h2>
+					<h2 class="title-page wow animate__fadeInUp">Этапы работы</h2>
 					<div class="steps__items">
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay=".2s">
 							<div class="step__num">01</div>
 							<div class="step__title">Подготовка</div>
 							<div class="step__text">Получение технического паспорта в БТИ, изучение законодательства и норм
 								региона.
 							</div>
 						</div>
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay=".4s">
 							<div class="step__num">02</div>
 							<div class="step__title">Согласование</div>
 							<div class="step__text">Обращение в МФЦ или онлайн для подачи заявления на согласование
@@ -150,14 +150,14 @@
 								техпаспорт, согласие всех собственников.
 							</div>
 						</div>
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay=".6s">
 							<div class="step__num">03</div>
 							<div class="step__title">Проведение работ</div>
 							<div class="step__text">После одобрения можно приступать к перепланировке, соблюдая утвержденный
 								проект.
 							</div>
 						</div>
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay=".8s">
 							<div class="step__num">04</div>
 							<div class="step__title">Завершение</div>
 							<div class="step__text">Оформление акта приемочной комиссии о завершении работ и направление его
@@ -169,9 +169,9 @@
 			</section>
 			<section class="management section-padding">
 				<div class="management__container">
-					<h2 class="management__title title-page">Доверительное управление</h2>
+					<h2 class="management__title title-page wow animate__fadeInUp">Доверительное управление</h2>
 					<div class="management__inner flex-img flex-img_reverse">
-						<div class="flex-img__item about-content">
+						<div class="flex-img__item about-content wow animate__fadeInRight">
 							<div class="about-content__text">
 								В настоящее время мы можем не только помочь Вам с ремонтом квартиры, но и взять ее в <span>последующее
 									доверительное управление</span>
@@ -194,7 +194,7 @@
 								<i class="circle-btn"></i>
 							</div>
 						</div>
-						<div class="flex-img__item -ibg">
+						<div class="flex-img__item -ibg  wow animate__fadeInUp">
 							<img src="img/management-img.jpg" alt="Image">
 						</div>
 					</div>
@@ -203,8 +203,8 @@
 
 			<section class="gallery section-padding">
 				<div class="gallery__container">
-					<h2 class="gallery__title title-page">Галерея проектов</h2>
-					<div class="gallery__body swiper">
+					<h2 class="gallery__title title-page animate__fadeInUp wow">Галерея проектов</h2>
+					<div class="gallery__body swiper wow animate__fadeInUp">
 						<div class="gallery__wrapper swiper-wrapper">
 							<div class="gallery__slide swiper-slide">
 								<div class="item-gallery">
@@ -272,13 +272,13 @@
 				<div class="feedback__container">
 					<div class="feedback__wrapper" style="background-image: url(img/feedback-img.jpg);">
 						<div class="feedback__content">
-							<div class="feedback__info">
+							<div class="feedback__info animate__fadeInUp wow">
 								<h2 class="feedback__title title">Инвестируйте вместе с нами!</h2>
 								<div class="feedback__text">Оставьте ваши контакты и наш менеджер свяжется с вами в ближайшее
 									время!
 								</div>
 							</div>
-							<div class="feedback__socials hero-socials">
+							<div class="feedback__socials hero-socials animate__fadeInUp wow">
 								<div class="hero-socials__title">Мы в соцсетях:</div>
 								<div class="hero-socials__buttons">
 									<a href="" class="hero-socials__btn button button_secondary">
@@ -292,7 +292,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feedback__form" data-da=".feedback__content, 767.98">
+						<div class="feedback__form animate__fadeInRight wow" data-da=".feedback__content, 767.98">
 							<form action="#" class="form">
 								<div class="form__row">
 									<input class="input" autocomplete="off" type="text" placeholder="Ваше имя">
@@ -354,7 +354,7 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+		<footer class="footer wow animate__fadeInUp">
 			<div class="footer__container">
 				<a href="/" class="footer__logo logo"><img src="img/logo.svg" alt="Logo"></a>
 				<div class="footer__links">
@@ -368,7 +368,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240729162200"></script>
+	<script src="js/app.min.js?_v=20240730092527"></script>
 </body>
 
 </html>
