--- a/repair.html
+++ b/repair.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240729162200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240730092527">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,7 +58,7 @@
 			<section class="hero section-padding hero_inner">
 				<div class="hero__container">
 					<div class="hero__inner">
-						<div class="hero__content">
+						<div class="hero__content wow animate__fadeInLeft">
 							<div class="hero__img -ibg">
 								<div class="hero__title-block title-block">
 									<h1 class="title-block__title">Ремонт</h1>
@@ -70,7 +70,7 @@
 								</picture>
 							</div>
 						</div>
-						<div class="hero__sidebar">
+						<div class="hero__sidebar wow animate__fadeInRight">
 							<div class="hero__form">
 								<form action="#" class="form">
 									<div class="form__header">
@@ -110,7 +110,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="hero__dop dop-info">
+					<div class="hero__dop dop-info wow animate__fadeInUp">
 						<div class="dop-info__icon">
 							<img src="img/icons/information.svg" alt="Image">
 						</div>
@@ -124,9 +124,9 @@
 
 			<section class="type-service section-padding">
 				<div class="type-service__container">
-					<h2 class="title-page">Вид услуги</h2>
+					<h2 class="title-page wow animate__fadeInUp">Вид услуги</h2>
 					<div class="text-block-items">
-						<div class="text-block-item">
+						<div class="text-block-item wow animate__fadeInRight" data-wow-delay=".2s">
 							<div class="text-block-item__title">Капитальный ремонт</div>
 							<div class="text-block-item__text">
 								<p>
@@ -140,7 +140,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="text-block-item">
+						<div class="text-block-item wow animate__fadeInRight" data-wow-delay=".4s">
 							<div class="text-block-item__title">Косметический ремонт</div>
 							<div class="text-block-item__text">
 								<p>
@@ -153,7 +153,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="text-block-item">
+						<div class="text-block-item wow animate__fadeInRight" data-wow-delay=".6s">
 							<div class="text-block-item__title">Ремонт по дизайн-проекту</div>
 							<div class="text-block-item__text">
 								<p>Дизайн-проект разрабатывается с учётом всех пожеланий заказчика, включая стиль, цветовую
@@ -171,9 +171,9 @@
 
 			<section class="dop-services section-padding">
 				<div class="dop-services__container">
-					<h2 class="title-page">Дополнительные услуги</h2>
+					<h2 class="title-page wow animate__fadeInUp">Дополнительные услуги</h2>
 					<div class="dop-services__items">
-						<div class="item-dop-services">
+						<div class="item-dop-services wow animate__fadeInRight" data-wow-delay=".2s">
 							<div class="item-dop-services__img">
 								<img src="img/services/dop/01.jpg" alt="Image">
 							</div>
@@ -185,7 +185,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-dop-services">
+						<div class="item-dop-services wow animate__fadeInRight" data-wow-delay=".4s">
 							<div class="item-dop-services__img">
 								<img src="img/services/dop/02.jpg" alt="Image">
 							</div>
@@ -197,7 +197,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-dop-services">
+						<div class="item-dop-services wow animate__fadeInRight" data-wow-delay=".6s">
 							<div class="item-dop-services__img">
 								<img src="img/services/dop/03.jpg" alt="Image">
 							</div>
@@ -209,7 +209,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-dop-services">
+						<div class="item-dop-services wow animate__fadeInRight" data-wow-delay=".8s">
 							<div class="item-dop-services__img">
 								<img src="img/services/dop/04.jpg" alt="Image">
 							</div>
@@ -221,7 +221,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-dop-services">
+						<div class="item-dop-services wow animate__fadeInRight" data-wow-delay="1s">
 							<div class="item-dop-services__img">
 								<img src="img/services/dop/05.jpg" alt="Image">
 							</div>
@@ -239,9 +239,9 @@
 
 			<section class="steps section-padding">
 				<div class="steps__container">
-					<h2 class="title-page">Этапы работы</h2>
+					<h2 class="title-page wow animate__fadeInUp">Этапы работы</h2>
 					<div class="steps__items">
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay=".2s">
 							<div class="step__num">01</div>
 							<div class="step__title">
 								Планирование и подготовка
@@ -250,7 +250,7 @@
 								Определение целей и бюджета ремонта, выбор материалов и стиля, создание дизайн-проекта.
 							</div>
 						</div>
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay=".4s">
 							<div class="step__num">02</div>
 							<div class="step__title">
 								Демонтаж старого покрытия
@@ -259,7 +259,7 @@
 								Определение целей и бюджета ремонта, выбор материалов и стиля, создание дизайн-проекта.
 							</div>
 						</div>
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay=".6s">
 							<div class="step__num">03</div>
 							<div class="step__title">
 								Чистовые работы
@@ -268,7 +268,7 @@
 								Выравнивание стен, потолков и полов, прокладка новых коммуникаций (электрика, сантехника).
 							</div>
 						</div>
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay=".8s">
 							<div class="step__num">04</div>
 							<div class="step__title">
 								Финальная проверка
@@ -277,7 +277,7 @@
 								Покраска стен, укладка напольного покрытия, установка дверей и&nbsp;окон, монтаж потолков.
 							</div>
 						</div>
-						<div class="step">
+						<div class="step wow animate__fadeInRight" data-wow-delay="1s">
 							<div class="step__num">05</div>
 							<div class="step__title">
 								Установка мебели и аксессуаров
@@ -292,8 +292,8 @@
 
 			<section class="model">
 				<div class="model__container">
-					<h2 class="title-page">3D модели объектов</h2>
-					<div class="model__body swiper">
+					<h2 class="title-page wow animate__fadeInUp">3D модели объектов</h2>
+					<div class="model__body swiper wow animate__fadeInUp">
 						<div class="model__wrapper swiper-wrapper">
 							<div class="model__slide swiper-slide">
 								<div class="item-gallery">
@@ -370,9 +370,9 @@
 			</section>
 			<section class="management section-padding">
 				<div class="management__container">
-					<h2 class="management__title title-page">Доверительное управление</h2>
+					<h2 class="management__title title-page wow animate__fadeInUp">Доверительное управление</h2>
 					<div class="management__inner flex-img flex-img_reverse">
-						<div class="flex-img__item about-content">
+						<div class="flex-img__item about-content wow animate__fadeInRight">
 							<div class="about-content__text">
 								В настоящее время мы можем не только помочь Вам с ремонтом квартиры, но и взять ее в <span>последующее
 									доверительное управление</span>
@@ -395,7 +395,7 @@
 								<i class="circle-btn"></i>
 							</div>
 						</div>
-						<div class="flex-img__item -ibg">
+						<div class="flex-img__item -ibg  wow animate__fadeInUp">
 							<img src="img/management-img.jpg" alt="Image">
 						</div>
 					</div>
@@ -404,23 +404,23 @@
 
 			<section class="valuation section-padding">
 				<div class="valuation__container">
-					<h2 class="title-page">Ценности работы</h2>
+					<h2 class="title-page wow animate__fadeInUp">Ценности работы</h2>
 					<div class="text-block-items">
-						<div class="text-block-item">
+						<div class="text-block-item wow animate__fadeInRight" data-wow-delay=".2s">
 							<div class="text-block-item__title">Внимательность и отзывчивость:</div>
 							<div class="text-block-item__text">
 								Важно проявлять искренний интерес к потребностям и проблемам клиентов, внимательно
 								выслушивать их и оперативно реагировать на запросы.
 							</div>
 						</div>
-						<div class="text-block-item">
+						<div class="text-block-item wow animate__fadeInRight" data-wow-delay=".4s">
 							<div class="text-block-item__title">Профессионализм и компетентность</div>
 							<div class="text-block-item__text">
 								Сотрудники должны обладать глубокими знаниями и навыками в области ремонта, чтобы
 								предоставлять качественные услуги и решать сложные задачи.
 							</div>
 						</div>
-						<div class="text-block-item">
+						<div class="text-block-item wow animate__fadeInRight" data-wow-delay=".6s">
 							<div class="text-block-item__title">Честность и прозрачность</div>
 							<div class="text-block-item__text">
 								Клиенты ценят честность и открытость в общении. Важно предоставлять точную информацию о
@@ -432,8 +432,8 @@
 			</section>
 			<section class="gallery section-padding">
 				<div class="gallery__container">
-					<h2 class="gallery__title title-page">Галерея проектов</h2>
-					<div class="gallery__body swiper">
+					<h2 class="gallery__title title-page animate__fadeInUp wow">Галерея проектов</h2>
+					<div class="gallery__body swiper wow animate__fadeInUp">
 						<div class="gallery__wrapper swiper-wrapper">
 							<div class="gallery__slide swiper-slide">
 								<div class="item-gallery">
@@ -501,13 +501,13 @@
 				<div class="feedback__container">
 					<div class="feedback__wrapper" style="background-image: url(img/feedback-img.jpg);">
 						<div class="feedback__content">
-							<div class="feedback__info">
+							<div class="feedback__info animate__fadeInUp wow">
 								<h2 class="feedback__title title">Инвестируйте вместе с нами!</h2>
 								<div class="feedback__text">Оставьте ваши контакты и наш менеджер свяжется с вами в ближайшее
 									время!
 								</div>
 							</div>
-							<div class="feedback__socials hero-socials">
+							<div class="feedback__socials hero-socials animate__fadeInUp wow">
 								<div class="hero-socials__title">Мы в соцсетях:</div>
 								<div class="hero-socials__buttons">
 									<a href="" class="hero-socials__btn button button_secondary">
@@ -521,7 +521,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feedback__form" data-da=".feedback__content, 767.98">
+						<div class="feedback__form animate__fadeInRight wow" data-da=".feedback__content, 767.98">
 							<form action="#" class="form">
 								<div class="form__row">
 									<input class="input" autocomplete="off" type="text" placeholder="Ваше имя">
@@ -583,7 +583,7 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+		<footer class="footer wow animate__fadeInUp">
 			<div class="footer__container">
 				<a href="/" class="footer__logo logo"><img src="img/logo.svg" alt="Logo"></a>
 				<div class="footer__links">
@@ -597,7 +597,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240729162200"></script>
+	<script src="js/app.min.js?_v=20240730092527"></script>
 </body>
 
 </html>
